alignment issue

--- a/inc/assets/css/astra-admin.css
+++ b/inc/assets/css/astra-admin.css
@@ -82,7 +82,7 @@
 
 .notice-content {
     display: inline-block;
-    padding-top: 5px;
+    padding-top: 7px;
 }
 
 .notice-content .notice-heading {
